# Hypercube

./: Cargo.toml  README.md
src/: fiatshamir.rs  grandproduct.rs  lib.rs  linearsumcheck.rs  matmul.rs  multilinear.rs  spark.rs  sumcheck.rs  univariate.rs
